# yolov8-onnx-cpp

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.example.txt  CMakeLists.txt  LICENSE  README.md  package.xml
include/: constants.h
include/nn/: autobackend.h  onnx_model_base.h
include/utils/: augment.h  common.h  ops.h  viz.h
include/yolov8_onnxruntime/: constants.h  types.h
include/yolov8_onnxruntime/nn/: autobackend.h  onnx_model_base.h
include/yolov8_onnxruntime/utils/: augment.h  common.h  ops.h  viz.h
src/: main.cpp
src/nn/: autobackend.cpp  onnx_model_base.cpp
src/utils/: augment.cpp  common.cpp  ops.cpp
