<?xml version="1.0"?>
<package format="2">
  <name>yolov8_onnxruntime</name>
  <version>0.0.0</version>
  <description>The yolov8_onnxruntime package</description>

  <maintainer email="jack@todo.todo">jack</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
